rocksdb/rocksdb/lib/librocksdb.nim


proc rocksdb_writebatch_wi_create*(reserved_bytes: csize_t; overwrite_keys: uint8): ptr rocksdb_writebatch_wi_t {.
    cdecl, importc: "rocksdb_writebatch_wi_create", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_create_from*(rep: cstring; size: csize_t): ptr rocksdb_writebatch_wi_t {.
    cdecl, importc: "rocksdb_writebatch_wi_create_from", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_destroy*(a1: ptr rocksdb_writebatch_wi_t) {.cdecl,
    importc: "rocksdb_writebatch_wi_destroy", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_clear*(a1: ptr rocksdb_writebatch_wi_t) {.cdecl,
    importc: "rocksdb_writebatch_wi_clear", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_count*(b: ptr rocksdb_writebatch_wi_t): cint {.cdecl,
    importc: "rocksdb_writebatch_wi_count", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_put*(a1: ptr rocksdb_writebatch_wi_t; key: cstring;
                               klen: csize_t; val: cstring; vlen: csize_t) {.cdecl,
    importc: "rocksdb_writebatch_wi_put", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_put_cf*(a1: ptr rocksdb_writebatch_wi_t; column_family: ptr rocksdb_column_family_handle_t;
                                  key: cstring; klen: csize_t; val: cstring;
                                  vlen: csize_t) {.cdecl,
    importc: "rocksdb_writebatch_wi_put_cf", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_putv*(b: ptr rocksdb_writebatch_wi_t; num_keys: cint;
                                keys_list: cstringArray;
                                keys_list_sizes: ptr csize_t; num_values: cint;
                                values_list: cstringArray;
                                values_list_sizes: ptr csize_t) {.cdecl,
    importc: "rocksdb_writebatch_wi_putv", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_putv_cf*(b: ptr rocksdb_writebatch_wi_t; column_family: ptr rocksdb_column_family_handle_t;
                                   num_keys: cint; keys_list: cstringArray;
                                   keys_list_sizes: ptr csize_t; num_values: cint;
                                   values_list: cstringArray;
                                   values_list_sizes: ptr csize_t) {.cdecl,
    importc: "rocksdb_writebatch_wi_putv_cf", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_merge*(a1: ptr rocksdb_writebatch_wi_t; key: cstring;
                                 klen: csize_t; val: cstring; vlen: csize_t) {.cdecl,
    importc: "rocksdb_writebatch_wi_merge", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_merge_cf*(a1: ptr rocksdb_writebatch_wi_t; column_family: ptr rocksdb_column_family_handle_t;
                                    key: cstring; klen: csize_t; val: cstring;
                                    vlen: csize_t) {.cdecl,
    importc: "rocksdb_writebatch_wi_merge_cf", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_mergev*(b: ptr rocksdb_writebatch_wi_t; num_keys: cint;
                                  keys_list: cstringArray;
                                  keys_list_sizes: ptr csize_t; num_values: cint;
                                  values_list: cstringArray;
                                  values_list_sizes: ptr csize_t) {.cdecl,
    importc: "rocksdb_writebatch_wi_mergev", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_mergev_cf*(b: ptr rocksdb_writebatch_wi_t; column_family: ptr rocksdb_column_family_handle_t;
                                     num_keys: cint; keys_list: cstringArray;
                                     keys_list_sizes: ptr csize_t;
                                     num_values: cint; values_list: cstringArray;
                                     values_list_sizes: ptr csize_t) {.cdecl,
    importc: "rocksdb_writebatch_wi_mergev_cf", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_delete*(a1: ptr rocksdb_writebatch_wi_t; key: cstring;
                                  klen: csize_t) {.cdecl,
    importc: "rocksdb_writebatch_wi_delete", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_singledelete*(a1: ptr rocksdb_writebatch_wi_t;
                                        key: cstring; klen: csize_t) {.cdecl,
    importc: "rocksdb_writebatch_wi_singledelete", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_delete_cf*(a1: ptr rocksdb_writebatch_wi_t; column_family: ptr rocksdb_column_family_handle_t;
                                     key: cstring; klen: csize_t) {.cdecl,
    importc: "rocksdb_writebatch_wi_delete_cf", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_singledelete_cf*(a1: ptr rocksdb_writebatch_wi_t;
    column_family: ptr rocksdb_column_family_handle_t; key: cstring; klen: csize_t) {.
    cdecl, importc: "rocksdb_writebatch_wi_singledelete_cf", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_deletev*(b: ptr rocksdb_writebatch_wi_t; num_keys: cint;
                                   keys_list: cstringArray;
                                   keys_list_sizes: ptr csize_t) {.cdecl,
    importc: "rocksdb_writebatch_wi_deletev", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_deletev_cf*(b: ptr rocksdb_writebatch_wi_t; column_family: ptr rocksdb_column_family_handle_t;
                                      num_keys: cint; keys_list: cstringArray;
                                      keys_list_sizes: ptr csize_t) {.cdecl,
    importc: "rocksdb_writebatch_wi_deletev_cf", dynlib: librocksdb.}
##  DO NOT USE - rocksdb_writebatch_wi_delete_range is not yet supported

proc rocksdb_writebatch_wi_delete_range*(b: ptr rocksdb_writebatch_wi_t;
                                        start_key: cstring;
                                        start_key_len: csize_t; end_key: cstring;
                                        end_key_len: csize_t) {.cdecl,
    importc: "rocksdb_writebatch_wi_delete_range", dynlib: librocksdb.}
##  DO NOT USE - rocksdb_writebatch_wi_delete_range_cf is not yet supported

proc rocksdb_writebatch_wi_delete_range_cf*(b: ptr rocksdb_writebatch_wi_t;
    column_family: ptr rocksdb_column_family_handle_t; start_key: cstring;
    start_key_len: csize_t; end_key: cstring; end_key_len: csize_t) {.cdecl,
    importc: "rocksdb_writebatch_wi_delete_range_cf", dynlib: librocksdb.}
##  DO NOT USE - rocksdb_writebatch_wi_delete_rangev is not yet supported

proc rocksdb_writebatch_wi_delete_rangev*(b: ptr rocksdb_writebatch_wi_t;
    num_keys: cint; start_keys_list: cstringArray;
    start_keys_list_sizes: ptr csize_t; end_keys_list: cstringArray;
    end_keys_list_sizes: ptr csize_t) {.cdecl, importc: "rocksdb_writebatch_wi_delete_rangev",
                                     dynlib: librocksdb.}
##  DO NOT USE - rocksdb_writebatch_wi_delete_rangev_cf is not yet supported

proc rocksdb_writebatch_wi_delete_rangev_cf*(b: ptr rocksdb_writebatch_wi_t;
    column_family: ptr rocksdb_column_family_handle_t; num_keys: cint;
    start_keys_list: cstringArray; start_keys_list_sizes: ptr csize_t;
    end_keys_list: cstringArray; end_keys_list_sizes: ptr csize_t) {.cdecl,
    importc: "rocksdb_writebatch_wi_delete_rangev_cf", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_put_log_data*(a1: ptr rocksdb_writebatch_wi_t;
                                        blob: cstring; len: csize_t) {.cdecl,
    importc: "rocksdb_writebatch_wi_put_log_data", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_iterate*(b: ptr rocksdb_writebatch_wi_t; state: pointer;
    put: proc (a1: pointer; k: cstring; klen: csize_t; v: cstring; vlen: csize_t) {.cdecl.};
    deleted: proc (a1: pointer; k: cstring; klen: csize_t) {.cdecl.}) {.cdecl,
    importc: "rocksdb_writebatch_wi_iterate", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_data*(b: ptr rocksdb_writebatch_wi_t; size: ptr csize_t): cstring {.
    cdecl, importc: "rocksdb_writebatch_wi_data", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_set_save_point*(a1: ptr rocksdb_writebatch_wi_t) {.cdecl,
    importc: "rocksdb_writebatch_wi_set_save_point", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_rollback_to_save_point*(
    a1: ptr rocksdb_writebatch_wi_t; errptr: cstringArray) {.cdecl,
    importc: "rocksdb_writebatch_wi_rollback_to_save_point", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_get_from_batch*(wbwi: ptr rocksdb_writebatch_wi_t;
    options: ptr rocksdb_options_t; key: cstring; keylen: csize_t; vallen: ptr csize_t;
    errptr: cstringArray): cstring {.cdecl, importc: "rocksdb_writebatch_wi_get_from_batch",
                                  dynlib: librocksdb.}
proc rocksdb_writebatch_wi_get_from_batch_cf*(wbwi: ptr rocksdb_writebatch_wi_t;
    options: ptr rocksdb_options_t;
    column_family: ptr rocksdb_column_family_handle_t; key: cstring; keylen: csize_t;
    vallen: ptr csize_t; errptr: cstringArray): cstring {.cdecl,
    importc: "rocksdb_writebatch_wi_get_from_batch_cf", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_get_from_batch_and_db*(
    wbwi: ptr rocksdb_writebatch_wi_t; db: ptr rocksdb_t;
    options: ptr rocksdb_readoptions_t; key: cstring; keylen: csize_t;
    vallen: ptr csize_t; errptr: cstringArray): cstring {.cdecl,
    importc: "rocksdb_writebatch_wi_get_from_batch_and_db", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_get_from_batch_and_db_cf*(
    wbwi: ptr rocksdb_writebatch_wi_t; db: ptr rocksdb_t;
    options: ptr rocksdb_readoptions_t;
    column_family: ptr rocksdb_column_family_handle_t; key: cstring; keylen: csize_t;
    vallen: ptr csize_t; errptr: cstringArray): cstring {.cdecl,
    importc: "rocksdb_writebatch_wi_get_from_batch_and_db_cf", dynlib: librocksdb.}
proc rocksdb_write_writebatch_wi*(db: ptr rocksdb_t;
                                 options: ptr rocksdb_writeoptions_t;
                                 wbwi: ptr rocksdb_writebatch_wi_t;
                                 errptr: cstringArray) {.cdecl,
    importc: "rocksdb_write_writebatch_wi", dynlib: librocksdb.}
proc rocksdb_writebatch_wi_create_iterator_with_base*(
    wbwi: ptr rocksdb_writebatch_wi_t; base_iterator: ptr rocksdb_iterator_t): ptr rocksdb_iterator_t {.
    cdecl, importc: "rocksdb_writebatch_wi_create_iterator_with_base",
    dynlib: librocksdb.}
proc rocksdb_writebatch_wi_create_iterator_with_base_cf*(
    wbwi: ptr rocksdb_writebatch_wi_t; base_iterator: ptr rocksdb_iterator_t;
    cf: ptr rocksdb_column_family_handle_t): ptr rocksdb_iterator_t {.cdecl,
    importc: "rocksdb_writebatch_wi_create_iterator_with_base_cf",
    dynlib: librocksdb.}
##  Options utils
##  Load the latest rocksdb options from the specified db_path.
##
##  On success, num_column_families will be updated with a non-zero
##  number indicating the number of column families.
##  The returned db_options, column_family_names, and column_family_options
##  should be released via rocksdb_load_latest_options_destroy().
##
##  On error, a non-null errptr that includes the error message will be
##  returned.  db_options, column_family_names, and column_family_options
##  will be set to NULL.

proc rocksdb_load_latest_options*(db_path: cstring; env: ptr rocksdb_env_t;
                                 ignore_unknown_options: bool;
                                 cache: ptr rocksdb_cache_t;
                                 db_options: ptr ptr rocksdb_options_t;
                                 num_column_families: ptr csize_t;
                                 column_family_names: ptr cstringArray;
    column_family_options: ptr ptr ptr rocksdb_options_t; errptr: cstringArray) {.
    cdecl, importc: "rocksdb_load_latest_options", dynlib: librocksdb.}
proc rocksdb_load_latest_options_destroy*(db_options: ptr rocksdb_options_t;
    list_column_family_names: cstringArray;
    list_column_family_options: ptr ptr rocksdb_options_t; len: csize_t) {.cdecl,
    importc: "rocksdb_load_latest_options_destroy", dynlib: librocksdb.}
##  Block based table options
